exports[`test a disabled toggle that is enabled 1`] = `
<div
  onClick={[Function]}>
  <div
    className="ceGBxN">
    <span
      className="eevtLb" />
  </div>
  <label
    className="gdzQSv">
    Off
  </label>
</div>
`;

exports[`test a disabled toggle that is enabled 2`] = `
<div
  onClick={[Function]}>
  <div
    className="ffcKYZ">
    <span
      className="lbeQtx" />
  </div>
  <label
    className="gdzQSv">
    On
  </label>
</div>
`;

exports[`test a disabled toggle which matches the snapshot 1`] = `
<div
  onClick={[Function]}>
  <div
    className="ceGBxN">
    <span
      className="eevtLb" />
  </div>
  <label
    className="gdzQSv">
    Off
  </label>
</div>
`;

exports[`test an enabled toggle that is disabled 1`] = `
<div
  onClick={[Function]}>
  <div
    className="ffcKYZ">
    <span
      className="lbeQtx" />
  </div>
  <label
    className="gdzQSv">
    On
  </label>
</div>
`;

exports[`test an enabled toggle that is disabled 2`] = `
<div
  onClick={[Function]}>
  <div
    className="ceGBxN">
    <span
      className="eevtLb" />
  </div>
  <label
    className="gdzQSv">
    Off
  </label>
</div>
`;

exports[`test an enabled toggle which matches the snapshot 1`] = `
<div
  onClick={[Function]}>
  <div
    className="ffcKYZ">
    <span
      className="lbeQtx" />
  </div>
  <label
    className="gdzQSv">
    On
  </label>
</div>
`;
